--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "next": "14.2.4",
+    "better-sqlite3": "^11.1.1",
+    "@types/better-sqlite3": "^7.6.10"
   },
   "devDependencies": {
     "typescript": "^5",
